fix spacing of faq and searches section

--- a/carbon-support-page/src/components/HelpTopics.css
+++ b/carbon-support-page/src/components/HelpTopics.css
@@ -8,8 +8,29 @@
 .help-topics-faq {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    flex: 1;
+    width: 100%;
 }
 
 .faq-button {
-    width: 200%;
+    width: 100%;
 }
+
+.help-topics-popular-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex: 3;
+}
+
+.help-popular-content-holder {
+    display: flex;
+    justify-content: stretch;
+}
+
+.help-button {
+    display: flex;
+    flex: auto;
+}
+
